[project]
name = "aiohttp-openapi-ermelo"
description = "Builds api schemas for aiohttp apps utilizing pydantic."
readme = "README.md"
requires-python = ">=3.11"  # 3.10 not supported due to lack of typing.Unpack
dependencies = ["aiohttp", "pydantic", "openapi-pydantic"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-aiohttp", "pytest-playwright-asyncio"]
yaml = ["pyyaml"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
aiohttp_openapi = ["contrib-ui/swagger-ui/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["playwright", "no_yaml"]
asyncio_default_test_loop_scope="session"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.extend-select = [
    "I",  # isort
    "UP",  # pyupgrade
]